feat(converter): 更新FrameServiceRoleConverter，继承BaseConverter并重写转换方法
- 将FrameServiceRoleConverter接口修改为继承BaseConverter，提供标准化的转换能力。
- 重写了多个转换方法，以支持特殊映射和前端展示优化字段的处理。
- 更新了相关注释，确保文档的准确性和可读性。

这些改动提升了转换器的灵活性和一致性，确保了整体设计的健壮性。